@@ -1,5 +1,6 @@
 v2.05 ??-???-09
 Fixed reporting of largest creatable object (Patch from John Tytgat).
+Removed use of special fields in generated mount names.
 
 v2.04 17-Sep-07
 Improved timeout and retry behaviour.
